# Vulkan-Engine

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build.bat  config.h.in  run-example.bat
.github/workflows/: build-windows.yml
app/: CMakeLists.txt  application.cpp  application.h  config.h.in
app/src/: application.cpp  application.h  config.h
cmake/: add_module_files.cmake  group_sources.cmake
core/: CMakeLists.txt
core/include/engine/: config.h  vk_config.h  vk_geometry.h  vk_material.h  vk_object3D.h  vk_renderer.h  vk_texture.h  vk_window.h
core/include/engine/materials/: vk_basic_phong.h  vk_basic_unlit.h  vk_phong.h  vk_physically_based.h  vk_unlit.h
core/include/engine/scene_objects/: vk_camera.h  vk_light.h  vk_mesh.h  vk_scene.h
core/include/engine/utilities/: vk_controller.h  vk_gui.h  vk_loaders.h
core/private/: vk_bootstrap.h  vk_buffer.h  vk_core.h  vk_descriptors.h  vk_frame.h  vk_image.h  vk_initializers.h  vk_pipeline.h  vk_renderpass.h  vk_swapchain.h  vk_uniforms.h  vk_utils.h
core/resources/shaders/: basic_phong.glsl  basic_unlit.glsl  depth.glsl  phong.glsl  physically_based.glsl  red.glsl  test.glsl  unlit.glsl
core/src/: vk_geometry.cpp  vk_renderer.cpp  vk_texture.cpp  vk_window.cpp
core/src/backend/: vk_bootstrap.cpp  vk_buffer.cpp  vk_descriptors.cpp  vk_frame.cpp  vk_image.cpp  vk_initializers.cpp  vk_pipeline.cpp  vk_renderpass.cpp  vk_swapchain.cpp  vk_utils.cpp
core/src/materials/: vk_basic_phong.cpp  vk_basic_unlit.cpp  vk_physically_based.cpp  vk_unlit.cpp
core/src/scene_objects/: vk_camera.cpp  vk_light.cpp  vk_mesh.cpp
core/src/utilities/: vk_controller.cpp  vk_gui.cpp  vk_loaders.cpp  vk_renderer_widget.cpp
demo/: CMakeLists.txt
demo/include/demo/: application.h
demo/src/: application.cpp  application.h  config.h  main.cpp
demos/: CMakeLists.txt  config.h  config.h.in
demos/renderer-app/: application.cpp  application.h  main.cpp
demos/rotating-kabuto/: main.cpp
examples/: CMakeLists.txt  imgui.ini
examples/lighting-test/: application.cpp  application.h  main.cpp
examples/procedural-sky/: application.cpp  application.h
examples/raytracing/: application.cpp  application.h  main.cpp
examples/renderer-app/: application.cpp  application.h  main.cpp
examples/resources/meshes/: scene.xml  table.ply
examples/resources/scenes/: scene.xml  sky.xml  sponza.xml  ss.xml
examples/rotating-kabuto/: main.cpp
examples/sponza/: application.cpp  application.h  main.cpp
include/engine/: common.h  core.h  systems.h  utils.h
resources/shaders/: composition.glsl  compute_env_irradiance.glsl  deferred.glsl  fxaa.glsl  hair_strand.glsl  irradiance_compute.glsl  panorama_converter.glsl  phong.glsl  physically_based.glsl  red.glsl  rtt.glsl  shadows.glsl  skybox.glsl  ssao.glsl  ssao_blur.glsl  test.glsl
setup/: build_debug_MSVC.bat  build_debug_ninja.bat  build_release.bat  build_release_ninja.bat  run-example.bat
src/: common.cpp  main.cpp  utils.cpp  vk_bootstrap.cpp  vk_bootstrap.h  vk_control.cpp  vk_control.h  vk_core.h  vk_engine.cpp  vk_engine.h  vk_initializers.cpp  vk_initializers.h  vk_mesh.cpp  vk_mesh.h  vk_pipeline.cpp  vk_pipeline.h  vk_renderer.cpp  vk_renderer.h  vk_shader.cpp  vk_shader.h  vk_swapchain.cpp  vk_swapchain.h  vk_utils.cpp  vk_utils.h
src/app/: CMakeLists.txt  application.cpp  application.h
src/backend/: bootstrap.cpp  buffer.cpp  descriptors.cpp  frame.cpp  image.cpp  initializers.cpp  pipeline.cpp  renderpass.cpp  swapchain.cpp  utils.cpp
src/core/: geometry.cpp  renderer.cpp  renderer_api_mgr.cpp  (+8 more)
src/engine/: CMakeLists.txt  vk_camera.cpp  vk_camera.h  vk_geometry.cpp  vk_geometry.h  vk_material.h  vk_mesh.cpp  vk_mesh.h  vk_object3D.h  vk_renderer.cpp  vk_renderer.h  vk_scene.h  vk_window.cpp  vk_window.h
src/engine/internal/: vk_bootstrap.cpp  vk_bootstrap.h  vk_buffer.h  vk_core.h  vk_engine.h  vk_frame.cpp  vk_frame.h  vk_initializers.cpp  vk_initializers.h  vk_pipeline.cpp  vk_swapchain.h  vk_uniforms.h  vk_utils.cpp  vk_utils.h
src/engine/utilities/: vk_controller.cpp  vk_controller.h
tests/: CMakeLists.txt
tests/headless/: CMakeLists.txt  main.cpp  test.cpp  test.h
tests/procedural-sky/: CMakeLists.txt  application.cpp  test.cpp  test.h
tests/resources/: .gitattributes
tests/resources/scenes/: sky.xml
tests/skin/: CMakeLists.txt  application.cpp  main.cpp  test.cpp  test.h
vulkan-engine/: CMakeLists.txt  vk_config.h.in
vulkan-engine/include/engine/: vk_common.h  vk_config.h  vk_geometry.h  vk_material.h  vk_object3D.h  vk_renderer.h  vk_texture.h  vk_window.h
vulkan-engine/include/engine/backend/: vk_bootstrap.h  vk_buffer.h  vk_descriptors.h  vk_frame.h  vk_image.h  vk_initializers.h  vk_pipeline.h  vk_renderpass.h  vk_swapchain.h  vk_uniforms.h  vk_utils.h
vulkan-engine/include/engine/materials/: vk_phong.h  vk_physically_based.h  vk_unlit.h
vulkan-engine/include/engine/scene_objects/: vk_camera.h  vk_light.h  vk_mesh.h  vk_scene.h
vulkan-engine/include/engine/utilities/: vk_controller.h  vk_gui.h  vk_loaders.h  vk_renderer_widget.h  vk_widgets.h
vulkan-engine/private/: vk_bootstrap.h  vk_buffer.h  vk_core.h  vk_descriptors.h  vk_frame.h  vk_initializers.h  vk_pipeline.h  vk_renderpass.h  vk_swapchain.h  vk_utils.h
vulkan-engine/resources/meshes/: cube.ply
vulkan-engine/resources/shaders/: depth.glsl  physically_based.glsl  shadows.glsl
vulkan-engine/src/: vk_geometry.cpp  vk_renderer.cpp  vk_renderer_api_mgr.cpp  vk_renderer_data_mgr.cpp  vk_renderer_drawing.cpp  vk_texture.cpp  vk_window.cpp
vulkan-engine/src/backend/: vk_bootstrap.cpp  vk_buffer.cpp  vk_descriptors.cpp  vk_frame.cpp  vk_image.cpp  vk_initializers.cpp  vk_pipeline.cpp  vk_renderpass.cpp  vk_swapchain.cpp  vk_utils.cpp
vulkan-engine/src/materials/: vk_phong.cpp  vk_physically_based.cpp  vk_unlit.cpp
vulkan-engine/src/scene_objects/: vk_camera.cpp  vk_light.cpp  vk_mesh.cpp
vulkan-engine/src/utilities/: vk_controller.cpp  vk_gui.cpp  vk_loaders.cpp  vk_renderer_widget.cpp  vk_widgets.cpp
(+432 files in other folders)
